# churn-ticket

./: .gitignore  Dockerfile  Dockerfile.API  Dockerfile.Streamlit  Procfile  docker-compose.yml  entrypoint.sh  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
data/interim/: churn.db
data/processed/: X_test.parquet  X_test_fs.parquet  X_train.parquet  X_train_fs.parquet  X_train_hft.parquet  X_val.parquet  X_val_fs.parquet  df.parquet  y_test.pkl  y_train.pkl  y_train_hft.pkl  y_val.pkl
notebooks/: crisp_3.ipynb  crisp_3_dd.ipynb  crisp_4_bt.ipynb  crisp_4_dd.ipynb  crisp_4_fs.ipynb  crisp_4_hft.ipynb  crisp_4_hft2.ipynb  crisp_4_hft3.ipynb  crisp_4_ml.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: data_processing.py  update_postgres.py  utils_business_translation.py  utils_data_description.py  utils_df_full.py  utils_eda.py  utils_feature_engineering.py  utils_feature_selection.py  utils_ml.py
src/api/: Dockerfile  api_tester.py  feature_engineering.py  main.py  routes.py  services.py
src/app/: Dockerfile  main.py
src/app/page_topics/: about.py  eda.py  home.py  model_explain.py  predict.py  ticket_simulation.py  top_clients.py
src/app/utils/: utils_business_translation.py  utils_eda_page.py  utils_fe_page.py  utils_model_explain.py  utils_ticket.py
src/models/: model.cbm  model.pkl
src/scalers/: min_max_scaler.pkl  one_hot_encoder.pkl  robust_scaler.pkl  standard_scaler.pkl
tests/: test_api.py  test_api_error.py  test_hello.py  test_services.py
