[tool.poetry]
name = "churn-ticket"
version = "0.1.0"
description = ""
authors = ["Gutto <guttolaudie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
polars = "^1.5.0"
seaborn = "^0.13.2"
optuna = "^3.6.1"
duckdb = "^1.0.0"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
scikit-learn = "^1.5.1"
ydata-profiling = "^4.9.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.8"
mkdocs-mermaid2-plugin = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.1"
taskipy = "^1.13.0"
mypy = "^1.11.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.jupyter-notebooks.dependencies]
jupyter = "^1.0.0"
notebook = "^7.2.1"
ipykernel = "^6.29.5"
plotly = "^5.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
ruff chec --select I --fix .
ruff format .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"
