[tool.poetry]
name = "churn-ticket"
version = "1.0.0"
description = ""
authors = ["Gutto <guttolaudie@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
polars = "^1.5.0"
seaborn = "^0.13.2"
duckdb = "^1.0.0"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
catboost = "^1.2.5"
streamlit = "^1.37.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.32"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
plotly = "^5.23.0"
streamlit-extras = "^0.4.7"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.1"
requests = "^2.32.3"
altair = "^5.4.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.8"
mkdocs-mermaid2-plugin = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
ruff = "^0.6.1"
taskipy = "^1.13.0"
mypy = "^1.11.1"
httpx = "^0.27.0"


[tool.poetry.group.jupyter-notebooks.dependencies]
jupyter = "^1.0.0"
notebook = "^7.2.1"
ipykernel = "^6.29.5"



[tool.poetry.group.ml_steps.dependencies]
optuna = "^3.6.1"
lightgbm = "^4.5.0"
xgboost = "^2.1.1"


[tool.poetry.group.eda.dependencies]
ydata-profiling = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
ruff chec --select I --fix .
ruff format .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"
